--- a/CrochetByJk/packages.config
+++ b/CrochetByJk/packages.config
@@ -4,7 +4,8 @@
   <package id="Autofac" version="4.0.0" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.0" targetFramework="net461" />
   <package id="AutoMapper" version="5.2.0" targetFramework="net461" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="bootstrap" version="3.3.0" targetFramework="net461" />
+  <package id="bootstrap-fileinput" version="4.3.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.Core" version="2.0.0" targetFramework="net461" />
   <package id="JavaScriptEngineSwitcher.Msie" version="2.0.0" targetFramework="net461" />
@@ -42,5 +43,5 @@
   <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net461" />
   <package id="VroomJs" version="1.2.3" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net461" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net461" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
