--- a/CrochetByJk/Views/Web.config
+++ b/CrochetByJk/Views/Web.config
@@ -18,7 +18,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="CrochetByJk" />
-      <add namespace="React.Web.Mvc" /></namespaces>
+      <add namespace="React.Web.Mvc" /><add namespace="DevTrends.MvcDonutCaching" /></namespaces>
     </pages>
   </system.web.webPages.razor>
 
